K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fullstack
  template:
    metadata:
      labels:
        app: fullstack
    spec:
      containers:
        - name: frontend
          image: sacheen7/sacheen-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

        - name: backend
          image: sacheen7/sacheen-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
