K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: fullstack
  ports:
    - name: frontend
      port: 80
      targetPort: 80
    - name: backend
      port: 5000
      targetPort: 5000
